structmeta-tests/tests/compile_fail/to_tokens/not_impl_to_tokens.stderr
error[E0277]: the trait bound `X: ToTokens` is not satisfied
  --> $DIR/not_impl_to_tokens.rs:4:5
   |
4  |     x: X,
   |     ^ the trait `ToTokens` is not implemented for `X`
   |
note: required by `to_tokens`
  --> $DIR/to_tokens.rs:55:5
   |
55 |     fn to_tokens(&self, tokens: &mut TokenStream);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
